--- a/src/styles/_Sawy.scss
+++ b/src/styles/_Sawy.scss
@@ -8,7 +8,7 @@
 
 #showcase {
     flex-direction: row;
-    padding: 50px;
+    padding: 50px 0 50px 0;
     transition: all 0.3s;
     h2 {
         color: black;
